# ucp-shopping-agent

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
k8s/: deployment.yaml  kustomization.yaml
src/common/: __init__.py  config.py  logging.py  models.py
src/ucp_shopping/: __init__.py  api.py  config.py  main.py  models.py  streaming.py
src/ucp_shopping/agents/: __init__.py  checkout_agent.py  comparison_agent.py  discovery_agent.py  optimizer.py  search_agent.py
src/ucp_shopping/mock_merchants/: __init__.py  merchant_app.py  merchant_factory.py
src/ucp_shopping/mock_merchants/catalogs/: homegoods.json  megamart.json  techzone.json
src/ucp_shopping/orchestrator/: __init__.py  graph.py  planner.py  state.py
src/ucp_shopping/protocols/: __init__.py  a2a_bridge.py  mcp_surface.py  ucp_client.py
tests/: conftest.py  test_api.py  test_comparison.py
